Se agrega busqueda de servicios y vehiculos: vista, url y plantilla.

--- a/aplicacion/templates/aplicacion/servicios.html
+++ b/aplicacion/templates/aplicacion/servicios.html
@@ -7,6 +7,8 @@
 
 {% block contenido %}
     <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="{% url 'agregarServicio' %}">Agregar servicio</a></div>
+    <br>
+    <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="{% url 'busquedaServicio' %}">Buscar servicios</a></div>
     
     <table class="table table-striped">
         <thead>
