--- a/aplicacion/templates/aplicacion/vehiculos.html
+++ b/aplicacion/templates/aplicacion/vehiculos.html
@@ -7,7 +7,8 @@
 
 {% block contenido %}
     <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="{% url 'agregarVehiculo' %}">Agregar vehículo</a></div>
-    
+    <br>
+    <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="{% url 'busquedaVehiculo' %}">Buscar vehiculos</a></div>
     <table class="table table-striped">
         <thead>
             <tr>
