Se agrega busqueda de productos: vista, url y plantilla.

--- a/aplicacion/templates/aplicacion/productos.html
+++ b/aplicacion/templates/aplicacion/productos.html
@@ -7,6 +7,8 @@
 
 {% block contenido %}
     <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="{% url 'agregarProducto' %}">Agregar producto</a></div>
+    <br>
+    <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="{% url 'busquedaProducto' %}">Buscar productos</a></div>
     
     <table class="table table-striped">
         <thead>
